Update .gitignore and _quarto.yml, and add content to about.qmd and post-with-code/index.qmd

--- a/posts/post-with-code/index.qmd
+++ b/posts/post-with-code/index.qmd
@@ -7,3 +7,16 @@ image: "image.jpg"
 ---
 
 This is a post with executable code.
+
+```{python}
+# | label: fig-polar
+# | fig-cap: "A line plot on a polar axis"
+
+
+```
+
+```{python}
+import sys
+print(sys.executable)
+```
+
