--- a/about.qmd
+++ b/about.qmd
@@ -1,19 +1,28 @@
 ---
-title: "About"
+title: "A propos"
 image: profile.jpg
 about:
   template: jolla
   links:
-    - icon: twitter
-      text: Twitter
-      href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://www.linkedin.com/in/jason-suarez/
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/All-Khwarizmi
 
 ---
 
-About this blog
+
+
+
+Bienvenue sur Education 2.0, un espace dédié à l'exploration de l'éducation du futur à la croisée des neurosciences cognitives, de la programmation, et de l'intelligence artificielle. Je suis [Votre Nom], le fondateur de ce blog, et je suis enchanté de vous accueillir dans notre communauté d'apprentissage et d'innovation.
+
+
+Chez Education 2.0, nous croyons en une vision d'apprentissage qui transcende les frontières traditionnelles. Notre mission est d'explorer les horizons de l'éducation, de repousser les limites de l'apprentissage, et d'inspirer une nouvelle génération d'apprenants et d'éducateurs.
+
+
+Mon propre parcours éducatif est le moteur de ce blog. Originaire de la République Dominicaine, j'ai fait de Paris ma maison. En tant que professeur d'espagnol, j'ai eu le privilège d'enseigner et de voir les lumières de la compréhension s'allumer dans les yeux de mes élèves. Mais j'ai toujours été un éternel apprenant, avide de découvrir comment fonctionne le cerveau humain et comment l'IA peut améliorer nos vies.
+
+
+Education 2.0 est né de cette passion pour l'éducation et l'innovation. Ici, nous explorons un éventail d'idées, des neurosciences cognitives aux projets d'IA en passant par les défis de l'apprentissage moderne. Nous partageons notre propre voyage à travers le développement de projets, des initiatives conçues pour repousser les frontières de l'apprentissage personnalisé et de l'optimisation éducative.
