--- a/posts/first_notebook_model/goat_detector_training.ipynb
+++ b/posts/first_notebook_model/goat_detector_training.ipynb
@@ -9,6 +9,7 @@
     "author: \"Jason Suárez\"\n",
     "date: \"2024-01-12\"\n",
     "categories: [AI, Machine Learning, Python, Fastai]\n",
+    "draft: false\n",
     "---"
    ]
   },
@@ -207,6 +208,7 @@
    "source": [
     "#| label: fig-installation\n",
     "#| fig-cap: \"A line plot on a polar axis\"\n",
+    "\n",
     "%pip install -Uqq fastai fastbook Pillow nbdev\n",
     "import fastbook\n",
     "fastbook.setup_book()\n",
