Add new dico series and post that is a translation of the original dico post on dev.to

--- a/index.qmd
+++ b/index.qmd
@@ -19,3 +19,6 @@ title-block-banner: false
 
 ##### [environnements virtuels](env-series.html)
 Ceci est une série d'articles sur les environnements virtuels.
+
+##### [Dico](dico-series.html)
+Dico, le dictionnaire qui éduque les élèves à l'utiliser judicieusement, les guidant vers une autonomie linguistique et numérique.
