--- a/posts/virtual-environnements/python_env.qmd
+++ b/posts/virtual-environnements/python_env.qmd
@@ -3,8 +3,8 @@ title: "Environnements virtuels avec Python "
 author: "Jason Suárez"
 date: "2024-01-21"
 categories: [Venv, Python, Anaconda]
-image: "image.png"
-draft: true
+image: "venv-python.png"
+draft: false
 ---
 ![](image.png)
 
