Update naming variables convention

--- a/posts/rl-algorithm-code/index.ipynb
+++ b/posts/rl-algorithm-code/index.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "4  87.0  87.288984"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,27 @@
    "source": [
     "train_data = pd.read_csv('data/train.csv')\n",
     "test_data = pd.read_csv('data/test.csv')\n",
+    "\n",
+    "# On élimine les rangées avec des valeurs manquantes\n",
+    "train_data = train_data.dropna()\n",
+    "test_data = test_data.dropna()\n",
+    "\n",
     "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On sépare les données en X et y\n",
+    "\n",
+    "X_train = train_data.x\n",
+    "y_train = train_data.y\n",
+    "\n",
+    "X_test = test_data.x\n",
+    "y_test = test_data.y"
    ]
   },
   {
@@ -218,15 +238,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data.dropna(inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -257,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -273,10 +284,7 @@
    "source": [
     "from utils import dataset_splitter\n",
     "\n",
-    "X_full = train_data.x\n",
-    "y_full = train_data.y\n",
-    "\n",
-    "X_train, X_val, y_train, y_val = dataset_splitter(X_full, y_full, test_size=0.3)"
+    "X_train, X_val, y_train, y_val = dataset_splitter(X_train, y_train, test_size=0.3)"
    ]
   },
   {
