--- a/posts/rl-algorithm-code/index.ipynb
+++ b/posts/rl-algorithm-code/index.ipynb
@@ -306,6 +306,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Standardization is a preprocessing technique used in machine learning to rescale and transform the features (variables) of a dataset to have a mean of 0 and a standard deviation of 1. It is also known as \"z-score normalization\" or \"z-score scaling.\" Standardization is an essential step in the data preprocessing pipeline for various reasons:\n",
+    "\n",
+    "### Why Use Standardization in Machine Learning?\n",
+    "\n",
+    "1. **Mean Centering**: Standardization centers the data by subtracting the mean from each feature. This ensures that the transformed data has a mean of 0. Mean centering is crucial because it helps in capturing the relative variations in the data.\n",
+    "\n",
+    "2. **Scale Invariance**: Standardization scales the data by dividing each feature by its standard deviation. This makes the data scale-invariant, meaning that the scale of the features no longer affects the performance of many machine learning algorithms. Without standardization, features with larger scales may dominate the learning process.\n",
+    "\n",
+    "3. **Improved Convergence**: Many machine learning algorithms, such as gradient-based optimization algorithms (e.g., gradient descent), converge faster when the features are standardized. It reduces the potential for numerical instability and overflow/underflow issues during training.\n",
+    "\n",
+    "4. **Comparability**: Standardizing the features makes it easier to compare and interpret the importance of each feature. This is especially important in models like linear regression, where the coefficients represent the feature's impact on the target variable.\n",
+    "\n",
+    "5. **Regularization**: In regularization techniques like Ridge and Lasso regression, the regularization strength is applied uniformly to all features. Standardization ensures that the regularization term applies fairly to all features.\n",
+    "\n",
+    "### How to Standardize Data\n",
+    "\n",
+    "The standardization process involves the following steps:\n",
+    "\n",
+    "1. Calculate the mean ($\\mu$) and standard deviation ($\\sigma$) for each feature in the dataset.\n",
+    "2. For each data point (sample), subtract the mean ($\\mu$) of the feature and then divide by the standard deviation ($\\sigma$) of the feature.\n",
+    "\n",
+    "Mathematically, the standardized value for a feature `x` in a dataset is calculated as:\n",
+    "\n",
+    "$$\n",
+    "\\text{Standardized value} = \\frac{x - \\mu}{\\sigma}\n",
+    "$$\n",
+    "\n",
+    "Here, `x` is the original value of the feature, $\\mu$ is the mean of the feature, and $\\sigma$ is the standard deviation of the feature."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -317,6 +352,65 @@
     "# On remodèle les données pour qu'elles soient compatibles avec le modèle\n",
     "X_train = X_train.reshape(-1, 1)\n",
     "X_val = X_val.reshape(-1, 1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implémentation de l'algorithme de régression linéaire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "Linear regression is a fundamental model in machine learning used for predicting a continuous output variable based on input features. The model function for linear regression is represented as:\n",
+    "\n",
+    "$$f_{w,b}(x) = wx + b$$\n",
+    "\n",
+    "In this equation, $f_{w,b}(x)$ represents the predicted output, $w$ is the weight parameter, $b$ is the bias parameter, and $x$ is the input feature.\n",
+    "\n",
+    "## Model Training\n",
+    "\n",
+    "To train a linear regression model, we aim to find the best values for the parameters $(w, b)$ that best fit our dataset.\n",
+    "\n",
+    "### Forward Pass\n",
+    "\n",
+    "The forward pass is a step where we compute the linear regression output for the input data $X$ using the current weights and biases. It's essentially applying our model to the input data.\n",
+    "\n",
+    "### Cost Function\n",
+    "\n",
+    "The cost function is used to measure how well our model is performing. It quantifies the difference between the predicted values and the actual values in our dataset. The cost function is defined as:\n",
+    "\n",
+    "$$J(w,b) = \\frac{1}{2m} \\sum_{i=1}^{m}(f_{w,b}(x^{(i)}) - y^{(i)})^2$$\n",
+    "\n",
+    "Here, $J(w, b)$ is the cost, $m$ is the number of training examples, $x^{(i)}$ is the input data for the $i$-th example, $y^{(i)}$ is the actual output for the $i$-th example, and $w$ and $b$ are the weight and bias parameters, respectively.\n",
+    "****\n",
+    "### Backward Pass (Gradient Computation)\n",
+    "\n",
+    "The backward pass computes the gradients of the cost function with respect to the weights and biases. These gradients are crucial for updating the model parameters during training. The gradient formulas are as follows:\n",
+    "$$\n",
+    "\\frac{\\partial J(w,b)}{\\partial b} = \\frac{1}{m} \\sum_{i=0}^{m-1} (f_{w,b}(X^{(i)}) - y^{(i)})\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\frac{\\partial J(w,b)}{\\partial w} = \\frac{1}{m} \\sum_{i=0}^{m-1} (f_{w,b}(X^{(i)}) - y^{(i)})X^{(i)}\n",
+    "$$\n",
+    "\n",
+    "## Training Process\n",
+    "\n",
+    "The training process involves iteratively updating the weights and biases to minimize the cost function. This is typically done through an optimization algorithm like gradient descent. The update equations for parameters are:\n",
+    "\n",
+    "$$w \\leftarrow w - \\alpha \\frac{\\partial J}{\\partial w}$$\n",
+    "\n",
+    "$$b \\leftarrow b - \\alpha \\frac{\\partial J}{\\partial b}$$\n",
+    "\n",
+    "Here, $\\alpha$ represents the learning rate, which controls the step size during parameter updates.\n",
+    "\n",
+    "By iteratively performing the forward pass, computing the cost, performing the backward pass, and updating the parameters, the model learns to make better predictions and fit the data.\n"
    ]
   },
   {
