Debugging overflow issue

--- a/posts/rl-algorithm-code/index.ipynb
+++ b/posts/rl-algorithm-code/index.ipynb
@@ -30,7 +30,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yj/l9r_dtt126ncwq1x9jfz7xkw0000gn/T/ipykernel_53206/702382961.py:1: DeprecationWarning: \n",
+      "/var/folders/yj/l9r_dtt126ncwq1x9jfz7xkw0000gn/T/ipykernel_57519/702382961.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -419,27 +419,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.71105588],\n",
+       "       [ 0.29327514],\n",
+       "       [ 1.19370984],\n",
+       "       [ 0.91665301]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train[:4]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cost after iteration 0: 489.0000000000001\n"
+      "Cost after iteration 0: 489.0000000000001\n",
+      "Cost after iteration 100: 2.388906370610145e+120\n",
+      "Cost after iteration 200: 2.3340996513463088e+238\n",
+      "Cost after iteration 300: inf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jasonsuarez/anaconda3/envs/blog/lib/python3.10/site-packages/numpy/core/fromnumeric.py:88: RuntimeWarning: overflow encountered in reduce\n",
+      "  return ufunc.reduce(obj, axis, dtype, out, **passkwargs)\n",
+      "/Users/jasonsuarez/Documents/Coding/Learning/Pratique/fastai_course/blog_quarto/posts/rl-algorithm-code/utils.py:110: RuntimeWarning: overflow encountered in square\n",
+      "  cost = (1/(2*self.m)) * np.sum(np.square(fw_b - self.y_train))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after iteration 400: inf\n",
+      "Cost after iteration 500: inf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jasonsuarez/Documents/Coding/Learning/Pratique/fastai_course/blog_quarto/posts/rl-algorithm-code/utils.py:120: RuntimeWarning: invalid value encountered in scalar subtract\n",
+      "  self.b = self.b - learning_rate * db\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cost after iteration 600: nan\n",
+      "Cost after iteration 700: nan\n",
+      "Cost after iteration 800: nan\n",
+      "Cost after iteration 900: nan\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "\n",
     "rl = LinearRegression(X_train, y_train)\n",
-    "costs= rl.train(epochs=100, learning_rate=0.01)"
+    "costs= rl.train(epochs=1000, learning_rate=0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
